...
        @Bindable var router = router
        
        /// When the user clicks, for example, the "Settings" icon at the bottom of the screen, the TabView uses the binding to reach into your Router and change selectedTab to .settingsTab.
        TabView(selection: $router.selectedTab) {
            // MARK: Home
            /// By passing a binding to the router's path, we are telling SwiftUI: "Keep this in sync with the homeTabPath array."
            /// If we manually append a route to homeTabPath in the code, the stack adds a new view. If the user taps the "Back" button, SwiftUI automatically removes that item from the homeTabPath array.
            NavigationStack(path: $router.homeTabPath) {
                HomeView()
                /// This tells the stack, "Listen for any data of the type AppRoute that gets pushed onto the path."
                    .navigationDestination(for: AppRoute.self) { route in
                        buildView(for: route)
                    }
...
            Section("Deep Link") {
                Button("Jump to Home > Detail W") {
                    router.deepLink(to: .homeTab, route: .detail(item: "W"))
                }
            }
        }
        .navigationTitle("Settings View")
    }
}

struct DetailView: View {
    let item: String
    @Environment(Router.self) private var router
...
